--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 secret='motherrfuckers'
+mongo='mongodb://zenitsu:<password>@ac-r4i5qi7-shard-00-00.vq7dmvm.mongodb.net:27017,ac-r4i5qi7-shard-00-01.vq7dmvm.mongodb.net:27017,ac-r4i5qi7-shard-00-02.vq7dmvm.mongodb.net:27017/?ssl=true&replicaSet=atlas-mk8w8g-shard-0&authSource=admin&retryWrites=true&w=majority'
+mongoA='mongodb://zenitsu:demonslayer@ac-r4i5qi7-shard-00-00.vq7dmvm.mongodb.net:27017,ac-r4i5qi7-shard-00-01.vq7dmvm.mongodb.net:27017,ac-r4i5qi7-shard-00-02.vq7dmvm.mongodb.net:27017/restapi?ssl=true&replicaSet=atlas-mk8w8g-shard-0&authSource=admin&retryWrites=true&w=majority'
